--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -51,12 +51,12 @@
       </ul>
 
 
-        <input
+        <!-- <input
           class="form-control w-50 mx-auto"
           type="search"
           placeholder="Search"
           aria-label="Search"
-        />
+        /> -->
 
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item mx-2">
@@ -69,22 +69,22 @@
             <i class="pi pi-shopping-bag" style="font-size: 1.1rem"></i>
           </a>
         </li>
-        <!-- <li class="nav-item mx-2">
+        <li class="nav-item mx-2">
           <a class="nav-link text-success" routerLink="/login">
             <i class="pi pi-sign-in" style="font-size: 1.2rem"> LogIn</i>
           </a>
-        </li> -->
+        </li>
         <!-- <li class="nav-item mx-2">
           <a class="nav-link text-success" routerLink="/register">
             <i class="pi pi-user-plus" style="font-size: 1.2rem"> Register</i>
 
           </a>
         </li> -->
-        <li class="nav-item mx-2">
+        <!-- <li class="nav-item mx-2">
           <a class="nav-link text-danger" >
             <i class="pi pi-sign-out" style="font-size: 1.1rem"> LogOut</i>
           </a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
