--- a/src/app/components/log-in/log-in.component.html
+++ b/src/app/components/log-in/log-in.component.html
@@ -9,7 +9,11 @@
           <div class="card-header text-center">
             <h2 class="text-success">LogIn</h2>
           </div>
-          <form [formGroup]="loginForm" (ngSubmit)="logIn(loginForm)" class="card-body">
+          <form
+            [formGroup]="loginForm"
+            (ngSubmit)="logIn(loginForm)"
+            class="card-body"
+          >
             <div class="form-floating mb-3">
               <input
                 type="email"
@@ -20,11 +24,24 @@
               />
               <label for="email">Email address</label>
             </div>
-            <div *ngIf="loginForm.get('email')?.errors && loginForm.get('email')?.touched " class="alert alert-danger mt-2">
-              <p *ngIf="loginForm.get('email')?.getError('required')" class="m-0">email is required</p>
-              <p *ngIf="loginForm.get('email')?.getError('email')" class="m-0">email pattern is Invalid</p>
+            <div
+              *ngIf="
+                loginForm.get('email')?.errors &&
+                loginForm.get('email')?.touched
+              "
+              class="alert alert-danger mt-2"
+            >
+              <p
+                *ngIf="loginForm.get('email')?.getError('required')"
+                class="m-0"
+              >
+                email is required
+              </p>
+              <p *ngIf="loginForm.get('email')?.getError('email')" class="m-0">
+                email pattern is Invalid
+              </p>
             </div>
-            <div class="form-floating ">
+            <div class="form-floating">
               <input
                 type="password"
                 class="form-control"
@@ -34,15 +51,55 @@
               />
               <label for="password">Password</label>
             </div>
-            <div *ngIf="loginForm.get('password')?.errors && loginForm.get('password')?.touched " class="alert alert-danger mt-2">
-              <p *ngIf="loginForm.get('password')?.getError('required')" class="m-0">Password is required</p>
-              <p *ngIf="loginForm.get('password')?.getError('pattern')" class="m-0">Password pattern is Invalid</p>
+            <div
+              *ngIf="
+                loginForm.get('password')?.errors &&
+                loginForm.get('password')?.touched
+              "
+              class="alert alert-danger mt-2"
+            >
+              <p
+                *ngIf="loginForm.get('password')?.getError('required')"
+                class="m-0"
+              >
+                Password is required
+              </p>
+              <p
+                *ngIf="loginForm.get('password')?.getError('pattern')"
+                class="m-0"
+              >
+                Password pattern is Invalid
+              </p>
             </div>
 
-            <button [disabled]="loginForm.invalid" type="submit" class="btn mt-3 w-100 btn-success">LogIn</button>
+            <p-toast
+              [showTransformOptions]="'translateY(100%)'"
+              [showTransitionOptions]="'500ms'"
+              [hideTransitionOptions]="'500ms'"
+              [showTransformOptions]="'translateX(100%)'"
+            ></p-toast>
+
+            <button
+              [disabled]="loginForm.invalid"
+              type="submit"
+              class="btn mt-3 w-100 btn-success"
+            >
+            <i
+                *ngIf="isLoading"
+                class="pi pi-spin pi-spinner"
+                style="font-size: 2rem"
+              ></i>
+              <span *ngIf="!isLoading">LogIn</span>
+
+            </button>
             <div class="card-footer text-center mt-3">
               <a routerLink="" class="nav-link text-danger">Forget Password</a>
-              <span class="text-muted">Don't Have an Account? <a class="nav-link d-inline text-success" routerLink="/register">Register</a></span>
+              <span class="text-muted"
+                >Don't Have an Account?
+                <a class="nav-link d-inline text-success" routerLink="/register"
+                  >Register</a
+                ></span
+              >
             </div>
           </form>
         </div>
