--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 
 
-<header>
+<header class="shadow-sm rounded">
   <!-- <owl-carousel-o [options]="customOptions">
     <ng-container *ngFor="let slide of dynamicSlides">
       <ng-template carouselSlide [id]="slide.id">
