--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,9 @@
-<app-header></app-header>
-<app-products></app-products>
+ <app-header class=""></app-header>
+<!-- <app-products></app-products> -->
 
+
+<div class="container my-4">
+  <input type="text" class="form-control w-50 mx-auto my-2" placeholder="Search ">
+  <app-featured-product></app-featured-product>
+
+</div>
