--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -20,3 +20,15 @@
   </p-carousel>
 </div>
  -->
+
+<!-- <div class="container" [value]="allProduct">
+</div> -->
+
+<div class="container my-3">
+  <h2 class="text-dark fw-bold mx-2">All Products :</h2>
+  <div class="row gy-4">
+    <div class="col-lg-3 col-md-4 col-6" *ngFor="let product of allProduct">
+      <app-product-card [product]="product"></app-product-card>
+    </div>
+  </div>
+</div>
