--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,16 @@
- <app-header class=""></app-header>
+<app-header class=""></app-header>
 <!-- <app-products></app-products> -->
 
-
 <div class="container my-4">
-  <input type="text" class="form-control w-50 mx-auto my-2" placeholder="Search ">
-  <app-featured-product></app-featured-product>
-
+  <input
+    type="text"
+    class="form-control w-50 mx-auto my-2"
+    placeholder="Search "
+  />
+  <div class="my-3">
+    <app-catigory></app-catigory>
+  </div>
+  <div class="my-3">
+    <app-featured-product></app-featured-product>
+  </div>
 </div>
