--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -92,7 +92,7 @@
           </div>
           <hr />
           <div class="d-flex">
-            <button class="btn w-50 me-3 fs-4 rounded-pill btn-success">
+            <button class="btn w-50 me-3 fs-5 rounded-pill btn-success">
               Buy Now
             </button>
             <button class="btn w-50 rounded-pill btn-outline-success">
@@ -126,7 +126,7 @@
             <div class="col-4">
               <img class="w-100" [src]="productDetails.brand.image" alt="" />
             </div>
-            <button class="btn fs-5 btn-outline-success w-100">Browse similar product</button>
+            <button disabled class="btn fs-5 btn-outline-success w-100">Browse similar product</button>
 
           </div>
         </div>
