--- a/src/app/components/catigory/catigory.component.html
+++ b/src/app/components/catigory/catigory.component.html
@@ -1,1 +1,28 @@
-<p>catigory works!</p>
+<div class="d-flex justify-content-between align-items-center">
+  <h2 class="text-dark fw-bold">Shop Our Top Categories:</h2>
+  <!-- <span class="text-muted"
+    ><a class="nav-link text-success" routerLink="/products">See all</a></span
+  > -->
+</div>
+<p-carousel
+  [value]="categories.slice(0, 10)"
+  [numVisible]="10"
+  [numScroll]="1"
+  [circular]="true"
+  [responsiveOptions]="responsiveOptions"
+  autoPlayInterval="1000"
+  class=""
+>
+  <ng-template class="" let-product pTemplate="item">
+    <div (click)="getCatProd(product._id)" class="card me-2">
+      <div class="card-img-top position-relative">
+        <img class="w-100" [src]="product.image" alt="" />
+        <div class="text-center bg-success-subtle w-100">
+          <span class="small fst-italic fw-lighter text-dark">{{
+            product.name
+          }}</span>
+        </div>
+      </div>
+    </div>
+    </ng-template>
+</p-carousel>
