--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,15 +2,14 @@
 <!-- <app-products></app-products> -->
 
 <div class="container my-4">
-  <input
-    type="text"
-    class="form-control w-50 mx-auto my-2"
-    placeholder="Search "
-  />
+  
   <div class="my-3">
     <app-catigory></app-catigory>
   </div>
   <div class="my-3">
     <app-featured-product></app-featured-product>
+  </div>
+  <div class="my-3">
+    <app-brands></app-brands>
   </div>
 </div>
