--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -11,12 +11,12 @@
       </ng-template>
   </p-card>
 </div> -->
-<div (click)="goDetails(product.id)" class="card  mx-2">
+<div (click)="goDetails(product.id)" class="card  border-success  mx-2">
 
 
   <div class="position-relative">
-    <img [src]="product.imageCover" class="card-img-top shadow-sm" alt="..." />
-    <button class="btn position-absolute p-3 text-success top-0 end-0">
+    <img loading="lazy" [src]="product.imageCover" class="card-img-top shadow-sm" alt="..." />
+    <button class="btn position-absolute p-3  text-success top-0 end-0">
       <i class="pi pi-heart fs-4"></i>
     </button>
   </div>
