--- a/src/app/components/log-in/log-in.component.html
+++ b/src/app/components/log-in/log-in.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col-md-6 align-self-center">
         <div class="card shadow">
-          <div class="card-header text-center">
+          <div class="card-header bg-success-subtle text-center">
             <h2 class="text-success">LogIn</h2>
           </div>
           <form
@@ -84,13 +84,12 @@
               type="submit"
               class="btn mt-3 w-100 btn-success"
             >
-            <i
+              <i
                 *ngIf="isLoading"
                 class="pi pi-spin pi-spinner"
                 style="font-size: 2rem"
               ></i>
               <span *ngIf="!isLoading">LogIn</span>
-
             </button>
             <div class="card-footer text-center mt-3">
               <a routerLink="" class="nav-link text-danger">Forget Password</a>
