--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,22 +1,13 @@
-<!-- <div class="card mx-3 flex justify-content-center">
-  <p-card [header]="product.title.split(' ').splice(0,2).join()" [subheader]="product.brand.name.split(' ').splice(0,2).join()" >
-      <ng-template class="card-header" pTemplate="header">
-          <img alt="Card" class=""  [src]="product.imageCover" />
-      </ng-template>
-      <p>
-          hi
-      </p>
-      <ng-template pTemplate="footer " class="text-center d-flex  w-100 justify-content-center">
-          <p-button class=" w-100" label="Add to Cart" icon="pi pi-shopping-cart" ></p-button>
-      </ng-template>
-  </p-card>
-</div> -->
-<div (click)="goDetails(product.id)" class="card  border-success  mx-2">
 
-
+<div (click)="goDetails(product.id)" class="card border-success mx-2">
   <div class="position-relative">
-    <img loading="lazy" [src]="product.imageCover" class="card-img-top shadow-sm" alt="..." />
-    <button class="btn position-absolute p-3  text-success top-0 end-0">
+    <img
+      loading="lazy"
+      [src]="product.imageCover"
+      class="card-img-top rounded-bottom-4 border-bottom border-success shadow-sm"
+      alt="..."
+    />
+    <button class="btn position-absolute p-3 text-success top-0 end-0">
       <i class="pi pi-heart fs-4"></i>
     </button>
   </div>
