--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col-md-6 align-self-center">
         <div class="card shadow">
-          <div class="card-header text-center">
+          <div class="card-header  bg-success-subtle text-center">
             <h2 class="text-success">Register</h2>
           </div>
           <form
@@ -164,7 +164,12 @@
                 Phone pattern is Invalid
               </p>
             </div>
-            <p-toast [showTransformOptions]="'translateY(100%)'" [showTransitionOptions]="'500ms'" [hideTransitionOptions]="'500ms'" [showTransformOptions]="'translateX(100%)'"></p-toast>
+            <p-toast
+              [showTransformOptions]="'translateY(100%)'"
+              [showTransitionOptions]="'500ms'"
+              [hideTransitionOptions]="'500ms'"
+              [showTransformOptions]="'translateX(100%)'"
+            ></p-toast>
             <!-- <button
               type="button"
               pButton
