cartModule and Add to cart function

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -31,7 +31,7 @@
         </li>
       </ul>
 
-      
+
 
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li *ngIf="isLogedIn" class="nav-item mx-2">
@@ -40,7 +40,7 @@
           </a>
         </li>
         <li *ngIf="isLogedIn" class="nav-item mx-2">
-          <a class="nav-link text-success" routerLink="/Cart">
+          <a class="nav-link text-success" routerLink="/cart">
             <i class="pi pi-shopping-bag" style="font-size: 1.1rem"></i>
           </a>
         </li>
